Fix formatting issues

--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Sara Araujo | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Sara Araujo | WDD 130</h1>
+        <img src="images/profile.jpeg" alt="Sara Araujo - Profile Picture" width="200">
+        <p>My name is Sara Araujo, and I am from Peru. I am currently studying Software Development,
+            where I am
+            learning the basics of programming and web development. I am interested in improving my
+            technical
+            skills and understanding how software can be used to solve real-world problems. In my
+            free
+            time, I
+            enjoy going for walks, playing the piano, and learning new things that help me grow both
+            personally
+            and professionally.</p>
+    </main>
+    <footer>
+        <p>&copy;2026 &#10070 Sara Araujo &#10070 Czech Republic</p>
+    </footer>
 </body>
+
 </html>
