--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h1>Sara Araujo | WDD 130</h1>
-        <img src="images/profile.jpeg" alt="Sara Araujo - Picture" width="200">
+        <img src="images/sara-profile.jpeg" alt="Sara Araujo - Picture" width="200">
         <p>My name is Sara Araujo, and I am from Peru. I am currently studying Software Development,
             where I am
             learning the basics of programming and web development. I am interested in improving my
