--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sara Araujo | WDD 130</title>
+    <title>Sara Araujo Sanchez | WDD 130</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h1>Sara Araujo | WDD 130</h1>
-        <img src="images/sara-profile.jpeg" alt="Sara Araujo - Picture" width="200">
+        <img src="images/profile.jpeg" alt="Sara Araujo - Picture" width="200">
         <p>My name is Sara Araujo, and I am from Peru. I am currently studying Software Development,
             where I am
             learning the basics of programming and web development. I am interested in improving my
@@ -29,7 +29,7 @@
             and professionally.</p>
     </main>
     <footer>
-        <p>&copy;2026 &#10070 Sara Araujo &#10070 Czech Republic</p>
+        <p>&copy;2026 &#10070; Sara Araujo &#10070; Czech Republic</p>
     </footer>
 </body>
 
