--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <h1>Sara Araujo | WDD 130</h1>
+        <h1>Sara Araujo Sanchez | WDD 130</h1>
         <img src="images/profile.jpeg" alt="Sara Araujo - Picture" width="200">
         <p>My name is Sara Araujo, and I am from Peru. I am currently studying Software Development,
             where I am
