--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="autor" content="Sara Araujo">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="HTML Layout Logo" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://www.byupathway.edu/"></a></li>
+            <li><a href="https://www.churchofjesuschrist.org/my-home?lang=eng"></a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem, odit.</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, autem.</p>
+        </section>
+    </main>
+    <aside>
+        <img
+          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/lima-peru/800x500/lima-peru-mormon-temple-911889-wallpaper.jpg"
+          alt="Templo Lima Peru" width="200">
+    </aside>
+    <footer>
+        <p>Sara Araujo</p>
+    </footer>
 </body>
+
 </html>
