--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | Sara Araujo Sanchez</title>
+    <meta name="description" content="Sara Araujo's BYU Pathway WDD 130 Course Home Page">
+    <meta name="author" content="Sara Araujo Sanchez">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -29,6 +31,16 @@
             personally
             and professionally.</p>
     </main>
+    <aside>
+        <h2>Peru</h2>
+        <img src="images/miraflores-lima-peru.jpg" alt="Lima Landscape">
+        <p>Lima, Peru is the capital city and the country’s main economic and cultural hub. Located
+            along the
+            Pacific coast, it blends rich history with modern urban life. Lima is known for its
+            colonial
+            architecture, vibrant gastronomy, and growing business and entrepreneurial ecosystem.
+        </p>
+    </aside>
     <footer>
         <p>&copy;2026 &#10070; Sara Araujo &#10070; Czech Republic</p>
     </footer>
