--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,22 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
       content="Feel the adrenaline of whitewater rafting. Join guided river adventures designed for safety, fun, and unforgettable memories.">
     <meta name="author" content="Sara Araujo Sanchez">
-    <title>Rafting Adventures | Extreme Experiences</title>
+    <title>Rafting Adventures | About us</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
     <header>
-        <img src="images/Rafting.png" alt="Rafting Logo">
+        <img src="images/rafting.png" alt="Rafting Logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About us</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
 
             </ul>
         </nav>
@@ -68,7 +69,7 @@
         </section>
     </main>
     <footer>
-        <p>©2026 Rafting Adventures | Sara Araujo</p>
+        <p>©2026 Rafting Adventures | Sara Araujo Sanchez</p>
         <nav class="socialmedia">
             <a href="https://www.facebook.com/"> <img src="images/facebook-logo.png"
                   alt="Facebook Icon" class="small-image"></a>
