--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description"
       content="Feel the adrenaline of whitewater rafting. Join guided river adventures designed for safety, fun, and unforgettable memories.">
     <meta name="author" content="Sara Araujo Sanchez">
-    <title>Rafting Adventures | About us</title>
+    <title>About us | Rafting Adventures</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
