--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="images/rafting.png" alt="Rafting Logo">
+        <img src="images/rafting-logo.png" alt="Rafting Logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
