--- a/index.html
+++ b/index.html
@@ -19,49 +19,59 @@
             <a href="https://www.facebook.com/">Facebook</a>
         </nav>
     </header>
-    <main>
-        <h1>Sara Araujo Sanchez | WDD 130</h1>
-        <img src="images/profile.jpeg" alt="Sara Araujo - Picture" width="200">
-        <p>My name is Sara Araujo, and I am from Peru. I am currently studying Software Development,
-            where I am
-            learning the fundamentals of programming and web development, including problem-solving,
-            logical
-            thinking, and basic coding practices. Through my studies, I am gaining a better
-            understanding of how
-            software is designed and how technology can be used to create practical solutions for
-            everyday
-            challenges. I am especially interested in improving my technical skills and learning how
-            to build
-            applications and websites that are useful, efficient, and user-friendly. I enjoy
-            learning new
-            technologies and continuously challenging myself to grow both academically and
-            professionally. In my
-            free time, I like going for walks, playing the piano, and exploring new topics related
-            to personal
-            development, creativity, and technology. I consider myself a motivated, responsible, and
-            curious
-            person who values education, discipline, and lifelong learning.</p>
-        <ul class="box indent">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-temple?lang=eng"
-                  target="_blank">Lima Peru Temple</a>
-            </li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/freiberg-germany-temple?lang=eng"
-                  target="_blank">Freiberg Germany Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng"
-                  target="_blank">Buenos Aires Argentina Temple
-                </a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Peru</h2>
-        <img src="images/miraflores-lima-peru.jpg" alt="Lima Landscape">
-        <p>Lima, Peru is the capital city and the country’s main economic and cultural hub. Located
-            along the
-            Pacific coast, it blends rich history with modern urban life. Lima is known for its
-            colonial
-            architecture, vibrant gastronomy, and growing business and entrepreneurial ecosystem.
-        </p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Sara Araujo Sanchez | WDD 130</h1>
+            <img src="images/profile.jpeg" alt="Sara Araujo - Picture" width="200">
+            <p>My name is Sara Araujo, and I am from Peru. I am currently studying Software
+                Development,
+                where I am
+                learning the fundamentals of programming and web development, including
+                problem-solving,
+                logical
+                thinking, and basic coding practices. Through my studies, I am gaining a better
+                understanding of how
+                software is designed and how technology can be used to create practical solutions
+                for
+                everyday
+                challenges. I am especially interested in improving my technical skills and learning
+                how
+                to build
+                applications and websites that are useful, efficient, and user-friendly. I enjoy
+                learning new
+                technologies and continuously challenging myself to grow both academically and
+                professionally. In my
+                free time, I like going for walks, playing the piano, and exploring new topics
+                related
+                to personal
+                development, creativity, and technology. I consider myself a motivated, responsible,
+                and
+                curious
+                person who values education, discipline, and lifelong learning.</p>
+            <ul class="box indent">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/lima-peru-temple?lang=eng"
+                      target="_blank">Lima Peru Temple</a>
+                </li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/freiberg-germany-temple?lang=eng"
+                      target="_blank">Freiberg Germany Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng"
+                      target="_blank">Buenos Aires Argentina Temple
+                    </a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Peru</h2>
+            <img src="images/miraflores-lima-peru.jpg" alt="Lima Landscape">
+            <p>Lima, Peru is the capital city and the country’s main economic and cultural hub.
+                Located
+                along the
+                Pacific coast, it blends rich history with modern urban life. Lima is known for its
+                colonial
+                architecture, vibrant gastronomy, and growing business and entrepreneurial
+                ecosystem.
+            </p>
+        </aside>
+    </div>
     <footer>
         <p>&copy;2026 &#10070; Sara Araujo &#10070; Czech Republic</p>
     </footer>
