--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
     <header>
         <img src="images/rafting-logo.png" alt="Rafting Logo">
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
@@ -50,26 +50,58 @@
         </div>
         <section>
             <h2>History</h2>
-            <p>
-                Rafting Adventures was founded with a passion for outdoor exploration and adventure
-                sports. What
-                started as a small group of rafting enthusiasts quickly grew into a professional
-                company
-                dedicated to sharing the excitement of whitewater rafting with others. Over the
-                years, we have
-                guided people from different backgrounds and experience levels, always focusing on
-                safety, fun,
-                and respect for nature. Today, Rafting Adventures continues to grow, offering
-                unforgettable
-                river experiences while staying true to our love for adventure and the outdoors.
-            </p>
+            <div class="history-grid">
+                <p>
+                    Rafting Adventures was founded with a passion for outdoor exploration and
+                    adventure
+                    sports. What
+                    began as a small group of rafting enthusiasts quickly grew into a professional
+                    company dedicated to
+                    sharing the thrill of whitewater rafting. From the very beginning, our focus has
+                    been on combining
+                    safety, excitement, and respect for the natural environment.
+                </p>
+                <img src="images/rafting-experiences.jpg" alt="History Picture" class="hpicture">
+                <p class=>Over the years, we have guided people from all backgrounds and
+                    experience levels,
+                    creating
+                    unforgettable river experiences for beginners and seasoned adventurers alike.
+                    Today,
+                    Rafting
+                    Adventures continues to expand, staying true to our love for adventure while
+                    providing high-quality,
+                    safe, and memorable outdoor experiences.
+                </p>
+            </div>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+            <div class="gallery">
+                <figure>
+                    <img src="images/rafting7.jpg" alt="Rafting Equipment">
+                    <figcaption>Top-quality rafting equipment</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting8.jpg" alt="Rafting Experience">
+                    <figcaption>Premium rafting experiences</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting9.jpg" alt="Rafting Experiences">
+                    <figcaption>Modern gear for maximum safety</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting10.jpg" alt="Rafting Leader">
+                    <figcaption>Expert guides you can trust</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting12.jpg" alt="Rafting Team">
+                    <figcaption>Strong teamwork on every rapid</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
-        <p>©2026 Rafting Adventures | Sara Araujo Sanchez</p>
+        <p class="copyright">©2026 Rafting Adventures | Sara Araujo Sanchez</p>
         <nav class="socialmedia">
             <a href="https://www.facebook.com/"> <img src="images/facebook-logo.png"
                   alt="Facebook Icon" class="small-image"></a>
