--- a/wwr/about.html
+++ b/wwr/about.html
@@ -62,7 +62,7 @@
                     safety, excitement, and respect for the natural environment.
                 </p>
                 <img src="images/rafting-experiences.jpg" alt="History Picture" class="hpicture">
-                <p class=>Over the years, we have guided people from all backgrounds and
+                <p>Over the years, we have guided people from all backgrounds and
                     experience levels,
                     creating
                     unforgettable river experiences for beginners and seasoned adventurers alike.
