--- a/wwr/about.html
+++ b/wwr/about.html
@@ -30,6 +30,7 @@
               class="hero1">
             <h1>Rafting Adventures</h1>
             <article>
+                <h2>Our Mission</h2>
                 <img src="images/happy-client.jpg" alt="Happy Client" class="client">
                 <p>
                     At Rafting Adventures, our purpose is to provide exciting and safe whitewater
