--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact us">
+    <meta name="description"
+      content="Contact Rafting Adventures for guided river trips, reservations, or questions about our outdoor experiences.">
     <meta name="author" content="Sara Araujo Sanchez">
     <title>Contact us | Rafting Adventures</title>
     <link rel="stylesheet" href="styles/rafting.css">
@@ -23,83 +24,83 @@
         </nav>
     </header>
     <main>
-        <div>
-            <section class="contact-section">
-                <h1>Rafting Adventures</h1>
-                <ul class="contact-info">
-                    <li><strong>Address:</strong>Kaplická 151</li>
-                    <li><strong>City:</strong>Český Krumlov</li>
-                    <li><strong>Phone:</strong> +420 222 222 222</li>
-                    <li><strong>Email:</strong> contact@raftingadventures.com</li>
-                </ul>
-        </div>
-        <div class="contact-content">
-            <div class="map">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2627.5207319424844!2d14.320328661365354!3d48.81012510398315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47735d76b543bd91%3A0xd8e346f81ef44649!2zS2FwbGlja8OhIDE1MSwgMzgxIDAxIMSMZXNrw70gS3J1bWxvdiAx!5e0!3m2!1sen!2scz!4v1770398626183!5m2!1sen!2scz"
-                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="contact-section">
+            <h1>Rafting Adventures</h1>
+            <ul class="contact-info">
+                <li><strong>Address:</strong>Kaplická 151</li>
+                <li><strong>City:</strong>Český Krumlov</li>
+                <li><strong>Phone:</strong> +420 222 222 222</li>
+                <li><strong>Email:</strong> contact@raftingadventures.com</li>
+            </ul>
+            <div class="contact-content">
+                <div class="map">
+                    <iframe
+                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2627.5207319424844!2d14.320328661365354!3d48.81012510398315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47735d76b543bd91%3A0xd8e346f81ef44649!2zS2FwbGlja8OhIDE1MSwgMzgxIDAxIMSMZXNrw70gS3J1bWxvdiAx!5e0!3m2!1sen!2scz!4v1770398626183!5m2!1sen!2scz"
+                      width="600" height="450" allowfullscreen="" loading="lazy"
+                      referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="form">
+                    <form action="X">
+                        <div class="form-group">
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" name="name" placeholder="Type your name">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email"
+                              placeholder="example@email.com">
+                        </div>
+                        <div class="form-group">
+                            <fieldset class="radius">
+                                <legend>Message Purpose:</legend>
+                                <div>
+                                    <input type="radio" id="general" name="purpose" value="general">
+                                    <label for="general">General Inquiry</label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="reservation" name="purpose"
+                                      value="reservation">
+                                    <label for="reservation">Reservation Question</label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="website" name="purpose" value="website">
+                                    <label for="website">Website Suggestion</label>
+                                </div>
+                            </fieldset>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message:</label>
+                            <textarea name="message" id="message"
+                              placeholder="Write your message here"></textarea>
+                        </div>
+                        <div class="form-group checkbox-group">
+                            <label>
+                                <input type="checkbox" id="newsletter" name="newsletter">
+                                Please subscribe me to the monthly newsletter
+                            </label>
+                        </div>
+                        <button type="submit">Submit Message</button>
+                    </form>
+                </div>
             </div>
-            <div class="form">
-                <form action="X">
-                    <div class="form-group">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" placeholder="Type your name">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" placeholder="example@email.com">
-                    </div>
-                    <div class="form-group">
-                        <fieldset class="radius">
-                            <legend>Message Purpose:</legend>
-                            <label>
-                                <input type="radio" name="purpose" value="general">
-                                General Inquiry
-                            </label>
-                            <label>
-                                <input type="radio" name="purpose" value="reservation">
-                                Reservation Question
-                            </label>
-                            <label>
-                                <input type="radio" name="purpose" value="website">
-                                Website Suggestion
-                            </label>
-                        </fieldset>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message:</label>
-                        <textarea name="message" id="message"
-                          placeholder="Write your message here"></textarea>
-                    </div>
-                    <div class="form-group checkbox-group">
-                        <label>
-                            <input type="checkbox" id="newsletter" name="newsletter">
-                            Please subscribe me to the monthly newsletter
-                        </label>
-                    </div>
-                    <button>Submit</button>
-                </form>
-            </div>
-        </div>
         </section>
         <section>
             <h2>We Are Here To Serve You</h2>
             <div class="gallery-contact">
                 <figure>
-                    <img src="images/employee3.jpg" alt="Employee">
+                    <img src="images/employee3.jpg" alt="Employee - Jan Dvořák">
                     <figcaption>Trainer</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee1.jpg" alt="Employee">
+                    <img src="images/employee1.jpg" alt="Employee - Lucie Nováková">
                     <figcaption>Guide</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee4.jpg" alt="Employee">
+                    <img src="images/employee4.jpg" alt="Employee - Tomáš Černý">
                     <figcaption>Guide</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee5.jpg" alt="Employee">
+                    <img src="images/employee5.jpg" alt="Employee - Petra Svobodová">
                     <figcaption>Trainer</figcaption>
                 </figure>
             </div>
