--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -73,11 +73,9 @@
                             <textarea name="message" id="message"
                               placeholder="Write your message here"></textarea>
                         </div>
-                        <div class="form-group checkbox-group">
-                            <label>
-                                <input type="checkbox" id="newsletter" name="newsletter">
-                                Please subscribe me to the monthly newsletter
-                            </label>
+                        <div class="checkbox-group">
+                            <input type="checkbox" id="subscribe" name="subscribe">
+                            <label for="subscribe">Please subscribe to the newsletter</label>
                         </div>
                         <button type="submit">Submit Message</button>
                     </form>
