--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <section class="contact-section">
+        <section class="hero contact-section">
             <h1>Rafting Adventures</h1>
             <ul class="contact-info">
                 <li><strong>Address:</strong>Kaplická 151</li>
