--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -27,12 +27,12 @@
 
     <main>
         <div class="hero">
-            <h1 class="hero">Our Rafting Trips</h1>
+            <h1>Our Rafting Trips</h1>
         </div>
         <!-- Call to Action -->
         <div class="cta">
             <p>Ready to join an adventure?</p>
-            <a href="contact.html">Contact us today!</a>
+            <a href="contact.html" class="cta-button">Contact us today!</a>
         </div>
 
         <!-- Trip Details Section -->
