--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -36,37 +36,41 @@
         </div>
 
         <!-- Trip Details Section -->
-        <section class="trip-grid">
-            <div class="trip-item">
-                <img src="images/rafting9.jpg" alt="Beginner Rapids">
-                <h3>Beginner Rapids</h3>
-                <p>
-                    Perfect for first-timers! Enjoy gentle rapids and learn rafting basics with our
-                    expert guides.
-                </p>
-            </div>
+        <section>
+            <h2>Available Trips Overview</h2>
+            <div class="trip-grid">
+                <div class="trip-item">
+                    <img src="images/rafting9.jpg" alt="Beginner Rapids">
+                    <h3>Beginner Rapids</h3>
+                    <p>
+                        Perfect for first-timers! Enjoy gentle rapids and learn rafting basics with
+                        our
+                        expert guides.
+                    </p>
+                </div>
 
-            <div class="trip-item">
-                <img src="images/rafting-pictures.jpg" alt="Intermediate Rapids">
-                <h3>Intermediate Rapids</h3>
-                <p>
-                    Take on faster waters! A thrilling experience for those with some rafting
-                    experience.
-                </p>
-            </div>
+                <div class="trip-item">
+                    <img src="images/rafting-pictures.jpg" alt="Intermediate Rapids">
+                    <h3>Intermediate Rapids</h3>
+                    <p>
+                        Take on faster waters! A thrilling experience for those with some rafting
+                        experience.
+                    </p>
+                </div>
 
-            <div class="trip-item">
-                <img src="images/rafting10.jpg" alt="Advanced Rapids">
-                <h3>Advanced Rapids</h3>
-                <p>
-                    Extreme adventure! Navigate challenging rapids with our most experienced guides.
-                </p>
+                <div class="trip-item">
+                    <img src="images/rafting10.jpg" alt="Advanced Rapids">
+                    <h3>Advanced Rapids</h3>
+                    <p>
+                        Extreme adventure! Navigate challenging rapids with our most experienced
+                        guides.
+                    </p>
+                </div>
             </div>
         </section>
 
         <!-- Trips Table -->
         <section class="trips-table">
-            <h2>Available Trips Overview</h2>
             <table>
                 <thead>
                     <tr>
