--- a/wwr/index.html
+++ b/wwr/index.html
@@ -40,7 +40,10 @@
                 adventurers.
                 Explore breathtaking rivers, expert guides, and unforgettable experiences.
             </p>
-            <a href="trips.html" class="cta-button">Explore Our Trips</a>
+            <button class="cta-button" onclick="location.href='trips.html'">
+                Explore Our Trips
+            </button>
+
         </section>
 
         <!-- NEWSLETTER -->
