--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -32,7 +32,10 @@
         <!-- Call to Action -->
         <div class="cta">
             <p>Ready to join an adventure?</p>
-            <a href="contact.html" class="cta-button">Contact us today!</a>
+            <button class="cta-button" onclick="location.href='contact.html'">
+                Contact us today!
+            </button>
+
         </div>
 
         <!-- Trip Details Section -->
