--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -73,7 +73,7 @@
         </section>
 
         <!-- Trips Table -->
-        <section class="trips-table">
+        <div class="trips-table">
             <table>
                 <thead>
                     <tr>
@@ -104,7 +104,7 @@
                     </tr>
                 </tbody>
             </table>
-        </section>
+        </div>
     </main>
 
     <footer>
